fix-navbar-visibility

--- a/src/components/customSelect/style.css
+++ b/src/components/customSelect/style.css
@@ -1,6 +1,6 @@
 .custom-select {
-  min-width: 350px;
-  height: "2rem";
+  min-width: 250px;
+  width: 200px;
   position: relative;
 }
 
